--- a/笔记.md
+++ b/笔记.md
@@ -11,3 +11,8 @@
       <Route path='/' element={<Admin/>}>
           <Route path='/login' element={<Login></Login>}/>
          </Route>
+# 2022.1.19
+  react-router-dom 使用注意事项
+  1. 要进行路由的多级匹配时，可再匹配的路径后方加上*，以表示后方匹配任意路由
+       <Route path='/*' element={<Admin></Admin>}></Route>
+  2. 
